--- a/JAMS/public/registrarPreguntaFrecuente.html
+++ b/JAMS/public/registrarPreguntaFrecuente.html
@@ -10,8 +10,9 @@
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
     <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/general.css" />
+    <link rel="stylesheet" href="css/generales.css" />
     <link rel="stylesheet" href="css/header.css" />
+    <link rel="stylesheet" href="css/formulario.css"/>
     <link rel="stylesheet" href="css/footer.css"/>
     <link rel="stylesheet" href="css/preguntasFrecuentes.css"/>
     
