--- a/JAMS/public/principal_padres.html
+++ b/JAMS/public/principal_padres.html
@@ -18,7 +18,7 @@
             <nav class="menu_top">
                 <ul>
                     <li>
-                        <a class="sesion" href="#">Cerrar sesion</a>
+                        <a class="sesion" href="#"><button id="boton_cerrar">Cerrar sesion</button></a>
                     </li>
                 </ul>
             </nav>
@@ -177,5 +177,6 @@
 <script src="js/servicio_perfil_padres.js"></script>
 <script src="js/servicio_registro_padre.js"></script>
 <script src="js/controlador_perfil_padre.js"></script>
+<script src="js/controlador_nav.js"></script>
 
 </html>
