--- a/JAMS/public/listarPreguntasFrecuentesGenerales.html
+++ b/JAMS/public/listarPreguntasFrecuentesGenerales.html
@@ -63,7 +63,7 @@
             </tbody>
         </table>
     </main>
-    <input type="hidden" id="centro" name="codigo_centro" value="23152" />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
     <script src="js/servicio_preguntaFrecuente.js"></script>
